--- a/scripts/7_analyses/structure_analysis/pymol_commands.ipynb
+++ b/scripts/7_analyses/structure_analysis/pymol_commands.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -144,6 +144,30 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>54</th>\n",
+       "      <td>FLD194__EPI3178330</td>\n",
+       "      <td>../../../data/results/FLD194__EPI3178330/outpu...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>477</th>\n",
        "      <td>AVFluIgG01__EPI168674</td>\n",
        "      <td>../../../data/results/AVFluIgG01__EPI168674/ou...</td>\n",
@@ -162,6 +186,54 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>898</th>\n",
+       "      <td>65C6__EPI242227</td>\n",
+       "      <td>../../../data/results/65C6__EPI242227/output/0...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1408</th>\n",
+       "      <td>12H5__EPI658567</td>\n",
+       "      <td>../../../data/results/12H5__EPI658567/output/0...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -217,39 +289,54 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3 rows × 162 columns</p>\n",
+       "<p>6 rows × 162 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "              experiment_id  \\\n",
+       "54       FLD194__EPI3178330   \n",
        "477   AVFluIgG01__EPI168674   \n",
+       "898         65C6__EPI242227   \n",
+       "1408        12H5__EPI658567   \n",
        "1622      100F4__EPI2429052   \n",
        "1795       13D4__EPI3358339   \n",
        "\n",
        "                                               pdb_path  pos_111  pos_112  \\\n",
+       "54    ../../../data/results/FLD194__EPI3178330/outpu...        0        0   \n",
        "477   ../../../data/results/AVFluIgG01__EPI168674/ou...        0        0   \n",
+       "898   ../../../data/results/65C6__EPI242227/output/0...        0        0   \n",
+       "1408  ../../../data/results/12H5__EPI658567/output/0...        0        0   \n",
        "1622  ../../../data/results/100F4__EPI2429052/output...        0        0   \n",
        "1795  ../../../data/results/13D4__EPI3358339/output/...        0        0   \n",
        "\n",
        "      pos_113  pos_114  pos_115  pos_116  pos_117  pos_118  ...  pos_261  \\\n",
+       "54          0        0        0        0        0        0  ...        0   \n",
        "477         0        0        0        0        0        0  ...        0   \n",
+       "898         0        0        0        0        0        0  ...        0   \n",
+       "1408        0        0        1        0        0        1  ...        1   \n",
        "1622        0        0        0        0        0        0  ...        0   \n",
        "1795        0        0        0        0        0        0  ...        0   \n",
        "\n",
        "      pos_262  pos_263  pos_264  pos_265  pos_266  pos_267  pos_268  pos_269  \\\n",
+       "54          0        0        0        0        0        0        0        0   \n",
        "477         0        0        0        0        0        0        0        0   \n",
+       "898         0        0        0        0        0        0        0        0   \n",
+       "1408        1        0        0        0        1        0        0        0   \n",
        "1622        0        0        0        0        0        0        0        0   \n",
        "1795        0        0        0        0        0        0        0        0   \n",
        "\n",
        "      pos_270  \n",
+       "54        NaN  \n",
        "477       0.0  \n",
+       "898       0.0  \n",
+       "1408      0.0  \n",
        "1622      0.0  \n",
        "1795      0.0  \n",
        "\n",
-       "[3 rows x 162 columns]"
+       "[6 rows x 162 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,9 +346,13 @@
     "\n",
     "## Filter to a list of experiment_ids\n",
     "experiment_ids_to_show = [\n",
-    "    'AVFluIgG01__EPI168674', ## Worst\n",
-    "    '100F4__EPI2429052', ## Best\n",
-    "    '13D4__EPI3358339' ## Best Mexican isolate\n",
+    "    'AVFluIgG01__EPI168674', ## Worst Overall\n",
+    "    '100F4__EPI2429052', ## Best Overall\n",
+    "    '13D4__EPI3358339', ## Best Mexican isolate\n",
+    "    '12H5__EPI658567', ## Improved with G225R (Best)\n",
+    "    # 'H5.3__EPI167553', ## Worsened with N224K (Worst)\n",
+    "    'FLD194__EPI3178330', ## Worsened with E190N (2nd Best)\n",
+    "    '65C6__EPI242227' ## Oldest Isolate with N158D (Best)\n",
     "    ]\n",
     "\n",
     "contacts_df = contacts_df[contacts_df['experiment_id'].isin(experiment_ids_to_show)]\n",
@@ -271,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,14 +391,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Experiment ID: FLD194__EPI3178330\n",
       "Experiment ID: AVFluIgG01__EPI168674\n",
+      "Experiment ID: 65C6__EPI242227\n",
+      "Experiment ID: 12H5__EPI658567\n",
       "Experiment ID: 100F4__EPI2429052\n",
       "Experiment ID: 13D4__EPI3358339\n"
      ]
@@ -316,8 +410,10 @@
    "source": [
     "chain1 = \"A\"\n",
     "chain2 = \"B\"\n",
-    "chain1_color = \"0x005035\"\n",
-    "chain2_color = \"0xA49665\"\n",
+    "# chain1_color = \"0x005035\"\n",
+    "# chain2_color = \"0xA49665\"\n",
+    "chain1_color = \"0x4C4C4C\" ## Grey\n",
+    "chain2_color = \"0x732466\" ## PMS 255\n",
     "cutoff = 3.5\n",
     "\n",
     "cmd.reinitialize(\"everything\")\n",
@@ -346,7 +442,7 @@
     "    highlight_residues(object=experiment_id,\n",
     "                       chain = \"B\",\n",
     "                       residues = list(set(contacts[\"resi_chainB\"].tolist())),\n",
-    "                       color = \"firebrick\")\n",
+    "                       color = \"red\")\n",
     "    \n",
     "    ## Set chain A opacity\n",
     "    cmd.set(\"cartoon_transparency\", 0.5, f\"chain {chain1}\")\n",
@@ -437,6 +533,11 @@
     "ray\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
